save because of evacuation

--- a/build.gradle
+++ b/build.gradle
@@ -347,6 +347,7 @@ dependencies {
 		library.commons_configuration,
 		library.log4j_api_plus_core,
 		library.jetty_svc,
+		library.h2,
 	)
 	webserverRuntime (
 		library.runtime_logging,
